fix() name and version

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <br />
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
-      </a>v4.4.6/0.14.1-1
+      </a>v4.4.6/0.14.1
     </ion-row>
     <hr>
   </div>
@@ -35,7 +35,7 @@
     <br />
     <div style="background-color:lightyellow">
       <h1>Ionicons - theme and named colors</h1>
-      <h2>ae-ionicons-component</h2>
+      <h2>ae-icons-component</h2>
       <h3>
         <a href="http://acronymsandslang.com/definition/184249/RGBY-meaning.html">RGBY</a>
       </h3>
