chore() show versions ionicons/stencil/ae-icons-component

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
       <br />
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
-      </a>v4.4.6/0.14.1
+      </a>
+      <div>4.4.6/0.14.1/0.0.1</div>
     </ion-row>
     <hr>
   </div>
