wip() testing for size large small references

--- a/src/index.html
+++ b/src/index.html
@@ -60,22 +60,22 @@
       <h3>
         <a href="https://www.w3.org/TR/2018/REC-css-color-3-20180619/#html4">sRGB</a>
       </h3>
-      <ae-icons-component name="construct" size="large" color="black"></ae-icons-component>
-      <ae-icons-component name="finger-print" size="large" color="silver"></ae-icons-component>
-      <ae-icons-component name="flask" size="large" color="gray"></ae-icons-component>
-      <ae-icons-component name="flower" size="large" color="white"></ae-icons-component>
-      <ae-icons-component name="heart" size="large" color="maroon"></ae-icons-component>
-      <ae-icons-component name="ice-cream" size="large" color="red"></ae-icons-component>
-      <ae-icons-component name="sunny" size="large" color="purple"></ae-icons-component>
-      <ae-icons-component name="moon" size="large" color="fuchsia"></ae-icons-component>
-      <ae-icons-component name="star" size="large" color="green"></ae-icons-component>
-      <ae-icons-component name="planet" size="large" color="lime"></ae-icons-component>
-      <ae-icons-component name="globe" size="large" color="olive"></ae-icons-component>
-      <ae-icons-component name="rocket" size="large" color="yellow"></ae-icons-component>
-      <ae-icons-component name="snow" size="large" color="navy"></ae-icons-component>
-      <ae-icons-component name="rainy" size="large" color="blue"></ae-icons-component>
-      <ae-icons-component name="umbrella" size="large" color="teal"></ae-icons-component>
-      <ae-icons-component name="rose" size="large" color="aqua"></ae-icons-component>
+      <ae-icons-component name="construct" size="small" color="black"></ae-icons-component>
+      <ae-icons-component name="finger-print" size="small" color="silver"></ae-icons-component>
+      <ae-icons-component name="flask" size="small" color="gray"></ae-icons-component>
+      <ae-icons-component name="flower" size="small" color="white"></ae-icons-component>
+      <ae-icons-component name="heart" size="small" color="maroon"></ae-icons-component>
+      <ae-icons-component name="ice-cream" size="small" color="red"></ae-icons-component>
+      <ae-icons-component name="sunny" size="small" color="purple"></ae-icons-component>
+      <ae-icons-component name="moon" size="small" color="fuchsia"></ae-icons-component>
+      <ae-icons-component name="star" size="small" color="green"></ae-icons-component>
+      <ae-icons-component name="planet" size="small" color="lime"></ae-icons-component>
+      <ae-icons-component name="globe" size="small" color="olive"></ae-icons-component>
+      <ae-icons-component name="rocket" size="small" color="yellow"></ae-icons-component>
+      <ae-icons-component name="snow" size="small" color="navy"></ae-icons-component>
+      <ae-icons-component name="rainy" size="small" color="blue"></ae-icons-component>
+      <ae-icons-component name="umbrella" size="small" color="teal"></ae-icons-component>
+      <ae-icons-component name="rose" size="small" color="aqua"></ae-icons-component>
     </div>
     <div style="background-color:aquamarine">
       <h3>
