--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,13 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.4.6/0.15.0/0.0.2</div>
+      <div>4.4.7/0.16.0-0/0.0.3</div>
     </ion-row>
     <hr>
+  </div>
+
+  <div>
+    <ion-button>Size +/-</ion-button>
   </div>
 
   <div>
@@ -37,10 +41,11 @@
       <h3>
         <a href="http://acronymsandslang.com/definition/184249/RGBY-meaning.html">RGBY</a>
       </h3>
-      <ae-icons-component name="football" size="large" color="red"></ae-icons-component>
-      <ae-icons-component name="basketball" size="large" color="green"></ae-icons-component>
-      <ae-icons-component name="baseball" size="large" color="blue"></ae-icons-component>
-      <ae-icons-component name="add-circle" size="large" color="yellow"></ae-icons-component>
+      <ae-icons-component aesize="sixteen" name="football" color="red"></ae-icons-component>
+      <ae-icons-component name="basketball" color="green"></ae-icons-component>
+      <ae-icons-component aesize="sixty4" name="baseball" color="blue"></ae-icons-component>
+      <ae-icons-component aesize="ninety6" name="add-circle" color="yellow"></ae-icons-component>
+      <!-- <ae-icons-component aesize="hundred28" name="football" color="red"></ae-icons-component> -->
     </div>
     <div style="background-color:gainsboro">
       <h3>
