--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico?v=2">
   <link rel="manifest" href="/manifest.json">
 
+  <!-- ae Styles -->
+  <link rel="stylesheet" href="assets/aestyles.css">
+  <!-- Ionic Core -->
+  <script src="https://unpkg.com/@ionic/core@4.0.0-beta.16/dist/ionic.js"></script>
 </head>
 
 <body bgcolor="ivory">
@@ -29,12 +33,13 @@
     <hr>
   </div>
 
-  <div>
-    <ion-button>Size +/-</ion-button>
+  <div class="container">
+    <ion-icon name="remove-circle" color="danger" size="large" (click)="decrement()"></ion-icon>
+    <p style="font-size:24px"><b>SIZE</b></p>
+    <ion-icon name="add-circle" color="success" size="large" (click)="increment()"></ion-icon>
   </div>
 
   <div>
-    <br />
     <div style="background-color:lightyellow">
       <h1>Ionicons - theme and named colors</h1>
       <h2>ae-icons-component</h2>
