fix() update to new icon sizes and show all at the end

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <hr>
   </div>
 
+  <!-- container is css grid and is using ion-icon with ionic theme -->
   <div class="container">
     <ion-icon name="remove-circle" color="danger" size="large" (click)="decrement()"></ion-icon>
     <p style="font-size:24px"><b>SIZE</b></p>
@@ -46,11 +47,10 @@
       <h3>
         <a href="http://acronymsandslang.com/definition/184249/RGBY-meaning.html">RGBY</a>
       </h3>
-      <ae-icons-component aesize="sixteen" name="football" color="red"></ae-icons-component>
-      <ae-icons-component name="basketball" color="green"></ae-icons-component>
-      <ae-icons-component aesize="sixty4" name="baseball" color="blue"></ae-icons-component>
-      <ae-icons-component aesize="ninety6" name="add-circle" color="yellow"></ae-icons-component>
-      <!-- <ae-icons-component aesize="hundred28" name="football" color="red"></ae-icons-component> -->
+      <ae-icons-component aesize="ae16" name="football" color="red"></ae-icons-component>
+      <ae-icons-component aesize="ae32" name="basketball" color="green"></ae-icons-component>
+      <ae-icons-component aesize="ae48" name="baseball" color="blue"></ae-icons-component>
+      <ae-icons-component aesize="ae64" name="add-circle" color="yellow"></ae-icons-component>
     </div>
     <div style="background-color:gainsboro">
       <h3>
@@ -989,6 +989,35 @@
       <ae-icons-component name="logo-yahoo" size="large"></ae-icons-component>
       <ae-icons-component name="logo-yen" size="large"></ae-icons-component>
       <ae-icons-component name="logo-youtube" size="large"></ae-icons-component>
+    </div>
+
+    <div>
+      <br />
+      <ae-icons-component name="cloud-upload" color="darkolivegreen"></ae-icons-component>
+      <ae-icons-component aesize="ae16" name="cloudy" color="olive"></ae-icons-component>
+      <ae-icons-component aesize="ae24" name="cloudy-night" color="olivedrab"></ae-icons-component>
+      <ae-icons-component aesize="ae32" name="code" color="yellowgreen"></ae-icons-component>
+      <ae-icons-component aesize="ae40" name="code-download" color="limegreen"></ae-icons-component>
+      <ae-icons-component aesize="ae48" name="code-working" color="lime"></ae-icons-component>
+      <ae-icons-component aesize="ae56" name="cog" color="lawngreen"></ae-icons-component>
+      <ae-icons-component aesize="ae64" name="color-fill" color="chartreuse"></ae-icons-component>
+      <ae-icons-component aesize="ae72" name="color-filter" color="greenyellow"></ae-icons-component>
+      <ae-icons-component aesize="ae80" name="color-palette" color="springgreen"></ae-icons-component>
+      <ae-icons-component aesize="ae88" name="color-wand" color="mediumspringgreen"></ae-icons-component>
+      <ae-icons-component aesize="ae96" name="compass" color="mediumspringgreen"></ae-icons-component>
+      <ae-icons-component aesize="ae104" name="construct" color="lightgreen"></ae-icons-component>
+      <ae-icons-component aesize="ae112" name="contact" color="palegreen"></ae-icons-component>
+      <ae-icons-component aesize="ae120" name="contacts" color="darkseagreen"></ae-icons-component>
+      <ae-icons-component aesize="ae128" name="contract" color="mediumaquamarine"></ae-icons-component>
+      <br />
+      <ae-icons-component aesize="ae192" name="contrast" color="mediumseagreen"></ae-icons-component>
+      <ae-icons-component aesize="ae256" name="copy" color="seagreen"></ae-icons-component>
+      <ae-icons-component aesize="ae320" name="create" color="forestgreen"></ae-icons-component>
+      <ae-icons-component aesize="ae384" name="crop" color="green"></ae-icons-component>
+      <ae-icons-component aesize="ae448" name="cloud-upload" color="darkolivegreen"></ae-icons-component>
+      <br />
+      <ae-icons-component aesize="ae512" name="logo-ionic" size="large"></ae-icons-component>
+      <ae-icons-component aesize="ae1024" name="logo-ionitron" size="large"></ae-icons-component>
     </div>
 
     <div class="footer">
