--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <!-- ae Styles -->
   <link rel="stylesheet" href="assets/aestyles.css">
   <!-- Ionic Core -->
-  <script src="https://unpkg.com/@ionic/core@4.0.0-beta.16/dist/ionic.js"></script>
+  <script src="https://unpkg.com/@ionic/core@4.0.0-beta.17/dist/ionic.js"></script>
 </head>
 
 <body bgcolor="ivory">
@@ -28,7 +28,7 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.4.7/0.16.0-5/0.0.4</div>
+      <div>4.4.8/0.16.0/0.0.5</div>
     </ion-row>
     <hr>
   </div>
