--- a/src/index.html
+++ b/src/index.html
@@ -70,22 +70,76 @@
       <h3>
         <a href="https://www.w3.org/TR/2018/REC-css-color-3-20180619/#html4">sRGB</a>
       </h3>
-      <ae-icons-component name="construct" aesize="ae16" color="black"></ae-icons-component>
-      <ae-icons-component name="finger-print" aesize="ae16" color="silver"></ae-icons-component>
-      <ae-icons-component name="flask" aesize="ae16" color="gray"></ae-icons-component>
-      <ae-icons-component name="flower" aesize="ae16" color="white"></ae-icons-component>
-      <ae-icons-component name="heart" aesize="ae16" color="maroon"></ae-icons-component>
-      <ae-icons-component name="ice-cream" aesize="ae16" color="red"></ae-icons-component>
-      <ae-icons-component name="sunny" aesize="ae16" color="purple"></ae-icons-component>
-      <ae-icons-component name="moon" aesize="ae16" color="fuchsia"></ae-icons-component>
-      <ae-icons-component name="star" aesize="ae16" color="green"></ae-icons-component>
-      <ae-icons-component name="planet" aesize="ae16" color="lime"></ae-icons-component>
-      <ae-icons-component name="globe" aesize="ae16" color="olive"></ae-icons-component>
-      <ae-icons-component name="rocket" aesize="ae16" color="yellow"></ae-icons-component>
-      <ae-icons-component name="snow" aesize="ae16" color="navy"></ae-icons-component>
-      <ae-icons-component name="rainy" aesize="ae16" color="blue"></ae-icons-component>
-      <ae-icons-component name="umbrella" aesize="ae16" color="teal"></ae-icons-component>
-      <ae-icons-component name="rose" aesize="ae16" color="aqua"></ae-icons-component>
+      <ae-icons-component name="construct" color="black"></ae-icons-component>
+      <ae-icons-component name="finger-print" color="silver"></ae-icons-component>
+      <ae-icons-component name="flask" color="gray"></ae-icons-component>
+      <ae-icons-component name="flower" color="white"></ae-icons-component>
+      <ae-icons-component name="heart" color="maroon"></ae-icons-component>
+      <ae-icons-component name="ice-cream" color="red"></ae-icons-component>
+      <ae-icons-component name="sunny" color="purple"></ae-icons-component>
+      <ae-icons-component name="moon" color="fuchsia"></ae-icons-component>
+      <ae-icons-component name="star" color="green"></ae-icons-component>
+      <ae-icons-component name="planet" color="lime"></ae-icons-component>
+      <ae-icons-component name="globe" color="olive"></ae-icons-component>
+      <ae-icons-component name="rocket" color="yellow"></ae-icons-component>
+      <ae-icons-component name="snow" color="navy"></ae-icons-component>
+      <ae-icons-component name="rainy" color="blue"></ae-icons-component>
+      <ae-icons-component name="umbrella" color="teal"></ae-icons-component>
+      <ae-icons-component name="rose" color="aqua"></ae-icons-component>
+      <div>
+        <ae-icons-component name="construct" aesize="ae16" color="black"></ae-icons-component>
+        <ae-icons-component name="finger-print" aesize="ae16" color="silver"></ae-icons-component>
+        <ae-icons-component name="flask" aesize="ae16" color="gray"></ae-icons-component>
+        <ae-icons-component name="flower" aesize="ae16" color="white"></ae-icons-component>
+        <ae-icons-component name="heart" aesize="ae16" color="maroon"></ae-icons-component>
+        <ae-icons-component name="ice-cream" aesize="ae16" color="red"></ae-icons-component>
+        <ae-icons-component name="sunny" aesize="ae16" color="purple"></ae-icons-component>
+        <ae-icons-component name="moon" aesize="ae16" color="fuchsia"></ae-icons-component>
+        <ae-icons-component name="star" aesize="ae16" color="green"></ae-icons-component>
+        <ae-icons-component name="planet" aesize="ae16" color="lime"></ae-icons-component>
+        <ae-icons-component name="globe" aesize="ae16" color="olive"></ae-icons-component>
+        <ae-icons-component name="rocket" aesize="ae16" color="yellow"></ae-icons-component>
+        <ae-icons-component name="snow" aesize="ae16" color="navy"></ae-icons-component>
+        <ae-icons-component name="rainy" aesize="ae16" color="blue"></ae-icons-component>
+        <ae-icons-component name="umbrella" aesize="ae16" color="teal"></ae-icons-component>
+        <ae-icons-component name="rose" aesize="ae16" color="aqua"></ae-icons-component>
+      </div>
+      <div>
+        <ae-icons-component name="construct" aesize="ae24" color="black"></ae-icons-component>
+        <ae-icons-component name="finger-print" aesize="ae24" color="silver"></ae-icons-component>
+        <ae-icons-component name="flask" aesize="ae24" color="gray"></ae-icons-component>
+        <ae-icons-component name="flower" aesize="ae24" color="white"></ae-icons-component>
+        <ae-icons-component name="heart" aesize="ae24" color="maroon"></ae-icons-component>
+        <ae-icons-component name="ice-cream" aesize="ae24" color="red"></ae-icons-component>
+        <ae-icons-component name="sunny" aesize="ae24" color="purple"></ae-icons-component>
+        <ae-icons-component name="moon" aesize="ae24" color="fuchsia"></ae-icons-component>
+        <ae-icons-component name="star" aesize="ae24" color="green"></ae-icons-component>
+        <ae-icons-component name="planet" aesize="ae24" color="lime"></ae-icons-component>
+        <ae-icons-component name="globe" aesize="ae24" color="olive"></ae-icons-component>
+        <ae-icons-component name="rocket" aesize="ae24" color="yellow"></ae-icons-component>
+        <ae-icons-component name="snow" aesize="ae24" color="navy"></ae-icons-component>
+        <ae-icons-component name="rainy" aesize="ae24" color="blue"></ae-icons-component>
+        <ae-icons-component name="umbrella" aesize="ae24" color="teal"></ae-icons-component>
+        <ae-icons-component name="rose" aesize="ae24" color="aqua"></ae-icons-component>
+      </div>
+      <div>
+        <ae-icons-component name="construct" aesize="ae32" color="black"></ae-icons-component>
+        <ae-icons-component name="finger-print" aesize="ae32" color="silver"></ae-icons-component>
+        <ae-icons-component name="flask" aesize="ae32" color="gray"></ae-icons-component>
+        <ae-icons-component name="flower" aesize="ae32" color="white"></ae-icons-component>
+        <ae-icons-component name="heart" aesize="ae32" color="maroon"></ae-icons-component>
+        <ae-icons-component name="ice-cream" aesize="ae32" color="red"></ae-icons-component>
+        <ae-icons-component name="sunny" aesize="ae32" color="purple"></ae-icons-component>
+        <ae-icons-component name="moon" aesize="ae32" color="fuchsia"></ae-icons-component>
+        <ae-icons-component name="star" aesize="ae32" color="green"></ae-icons-component>
+        <ae-icons-component name="planet" aesize="ae32" color="lime"></ae-icons-component>
+        <ae-icons-component name="globe" aesize="ae32" color="olive"></ae-icons-component>
+        <ae-icons-component name="rocket" aesize="ae32" color="yellow"></ae-icons-component>
+        <ae-icons-component name="snow" aesize="ae32" color="navy"></ae-icons-component>
+        <ae-icons-component name="rainy" aesize="ae32" color="blue"></ae-icons-component>
+        <ae-icons-component name="umbrella" aesize="ae32" color="teal"></ae-icons-component>
+        <ae-icons-component name="rose" aesize="ae32" color="aqua"></ae-icons-component>
+      </div>
     </div>
     <div style="background-color:aquamarine">
       <h3>
