fix (css) width: 100vw

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <style>
     div.aeicons-scroll {
       background-color: lightyellow;
-      width: 600px;
+      width: 100vw;
       height: 800px;
       overflow: scroll;
     }
