--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     }
   </style>
   <!-- Ionic Core -->
-  <script src="https://unpkg.com/@ionic/core@4.0.0-rc.1/dist/ionic.js"></script>
+  <script src="https://unpkg.com/@ionic/core@4.0.0-rc.2/dist/ionic.js"></script>
 </head>
 
 <body bgcolor="ivory">
@@ -37,7 +37,7 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.5.1/0.16.2/0.0.8</div>
+      <div>4.5.1/0.17.0-1/0.0.10</div>
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container">
