fix () no larger icon sizes, stop horizontal scroll on myy phone

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.5.1/0.17.0-1/0.0.10</div>
+      <div>4.5.1/0.17.0-1/0.0.11</div>
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container">
@@ -1075,12 +1075,19 @@
       <ae-icons-component aesize="ae192" name="contrast" color="mediumseagreen"></ae-icons-component>
       <ae-icons-component aesize="ae256" name="copy" color="seagreen"></ae-icons-component>
       <ae-icons-component aesize="ae320" name="create" color="forestgreen"></ae-icons-component>
-      <ae-icons-component aesize="ae384" name="crop" color="green"></ae-icons-component>
-      <ae-icons-component aesize="ae448" name="cloud-upload" color="darkolivegreen"></ae-icons-component>
+      <ae-icons-component aesize="ae320" name="crop" color="green"></ae-icons-component>
+      <ae-icons-component aesize="ae320" name="cloud-upload" color="darkolivegreen"></ae-icons-component>
+      <ae-icons-component aesize="ae320" name="logo-ionic"></ae-icons-component>
+      <ae-icons-component aesize="ae320" name="logo-ionitron"></ae-icons-component>
       <br />
+      <!-- 
+      <ae-icons-component aesize="ae384" name="crop" color="green"></ae-icons-component>
+      <ae-icons-component aesize="ae384" name="cloud-upload" color="darkolivegreen"></ae-icons-component>
+      <ae-icons-component aesize="ae448" name="cloud-upload" color="darkolivegreen"></ae-icons-component>
       <ae-icons-component aesize="ae512" name="logo-ionic"></ae-icons-component>
       <br />
       <ae-icons-component aesize="ae1024" name="logo-ionitron"></ae-icons-component>
+      -->
     </div>
 
     <div class="footer">
