--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.5.1/0.17.0-1/0.0.11</div>
+      <div>4.5.1/0.17.0/0.0.12</div>
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container">
