fix () use circle for hover of inc.dec buttons

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,14 @@
       height: 800px;
       overflow: scroll;
     }
+
+    ion-icon:hover {
+      background-color: rebeccapurple;
+      border-radius: 50%;
+      /* box-shadow: inset 0px 0px 0px 2px red;
+      width: 48px !important;
+      height: 48px !important; */
+    }
   </style>
   <!-- Ionic Core -->
   <script src="https://unpkg.com/@ionic/core@4.0.0-rc.2/dist/ionic.js"></script>
