chore (deps) @ionic/core@4.0.0

--- a/src/index.html
+++ b/src/index.html
@@ -26,15 +26,17 @@
     }
 
     ion-icon:hover {
-      background-color: rebeccapurple;
+      width: 32px;
+      height: 32px;
       border-radius: 50%;
+      background-color: rebeccapurple;
       /* box-shadow: inset 0px 0px 0px 2px red;
       width: 48px !important;
       height: 48px !important; */
     }
   </style>
   <!-- Ionic Core -->
-  <script src="https://unpkg.com/@ionic/core@4.0.0-rc.2/dist/ionic.js"></script>
+  <script src="https://unpkg.com/@ionic/core@4.0.0/dist/ionic.js"></script>
 </head>
 
 <body bgcolor="ivory">
@@ -45,7 +47,7 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.5.2/0.17.0/0.0.13</div>
+      <div>4.5.5/0.17.0/0.0.15</div>
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container">
