fix () use ae-icons-component for +/-

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
   <!-- ae Styles -->
   <link rel="stylesheet" href="assets/aestyles.css">
   <style>
-    div.aeicons-scroll {
+    div.aeicons-scroll,
+    body {
       background-color: lightyellow;
       width: 100vw;
       height: 800px;
@@ -47,13 +48,17 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.5.5/0.17.0/0.0.15</div>
+      <div>4.5.5/0.17.0/0.0.16</div>
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container">
-      <ion-icon name="remove-circle" color="danger" size="large" (click)="decrement()"></ion-icon>
+      <!-- <ion-icon name="remove-circle" color="danger" size="large" (click)="decrement()"></ion-icon> -->
+      <ae-icons-component name="remove-circle" aesize="ae32" color="danger"></ae-icons-component>
+
       <p style="font-size:24px"><b>SIZE</b></p>
-      <ion-icon name="add-circle" color="success" size="large" (click)="increment()"></ion-icon>
+
+      <!-- <ion-icon name="add-circle" color="success" size="large" (click)="increment()"></ion-icon> -->
+      <ae-icons-component name="add-circle" aesize="ae32" color="success"></ae-icons-component>
     </div>
     <hr>
   </div>
