feat () add prop aetype="round" to distinguish round icons

--- a/src/index.html
+++ b/src/index.html
@@ -52,13 +52,9 @@
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container">
-      <!-- <ion-icon name="remove-circle" color="danger" size="large" (click)="decrement()"></ion-icon> -->
-      <ae-icons-component name="remove-circle" aesize="ae32" color="danger"></ae-icons-component>
-
+      <ae-icons-component aetype="round" aesize="ae32" name="remove-circle" color="danger"></ae-icons-component>
       <p style="font-size:24px"><b>SIZE</b></p>
-
-      <!-- <ion-icon name="add-circle" color="success" size="large" (click)="increment()"></ion-icon> -->
-      <ae-icons-component name="add-circle" aesize="ae32" color="success"></ae-icons-component>
+      <ae-icons-component aetype="round" aesize="ae32" name="add-circle" color="success"></ae-icons-component>
     </div>
     <hr>
   </div>
