fix (css) move styles to assets/aestyles.css

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <!-- ae Styles -->
   <link rel="stylesheet" href="assets/aestyles.css">
   <style>
-    div.aeicons-scroll,
+    /* div.aeicons-scroll,
     body {
       background-color: lightyellow;
       width: 100vw;
@@ -31,10 +31,10 @@
       height: 32px;
       border-radius: 50%;
       background-color: rebeccapurple;
-      /* box-shadow: inset 0px 0px 0px 2px red;
+      box-shadow: inset 0px 0px 0px 2px red;
       width: 48px !important;
-      height: 48px !important; */
-    }
+      height: 48px !important; 
+    } */
   </style>
   <!-- Ionic Core -->
   <script src="https://unpkg.com/@ionic/core@4.0.0/dist/ionic.js"></script>
