--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <meta name="theme-color" content="#005000">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <script src="/build/aeiconscomponent.js"></script>
+  <script type="module" src="/build/aeiconscomponent.esm.js"></script>
+  <script nomodule src="/build/aeiconscomponent.js"></script>
 
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico?v=2">
@@ -30,7 +31,7 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.5.8/0.18.1/0.1.3</div>
+      <div>4.5.8/1.0.4/0.2.0</div>
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container">
