feat(props): add arialabel for user defined name

--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,13 @@
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container">
-      <ae-icons-component aetype="round" aesize="ae32" name="remove-circle" color="danger"></ae-icons-component>
+      <ae-icons-component aetype="round" aesize="ae32" name="remove-circle" color="danger" arialabel="ae-remove-circle">
+      </ae-icons-component>
       <p style="font-size:24px"><b>SIZE</b></p>
-      <ae-icons-component aetype="round" aesize="ae32" name="add-circle" color="success"></ae-icons-component>
+      <ae-icons-component aetype="round" aesize="ae32" name="add-circle" color="success" arialabel="ae-add-circle">
+      </ae-icons-component>
     </div>
+    <p id="containerPara"></p>
     <hr>
   </div>
 
