--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       <ae-icons-component aetype="round" aesize="ae32" name="add-circle" color="success" arialabel="ae-add-circle">
       </ae-icons-component>
     </div>
-    <p id="containerPara"></p>
+    <p id="containerPara"><br></p>
     <hr>
   </div>
 
