wip(): testing ae-refresh-circle

--- a/src/index.html
+++ b/src/index.html
@@ -34,12 +34,19 @@
       <div>4.5.8/1.0.7/0.2.5</div>
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
-    <div class="container">
-      <ae-icons-component aetype="round" aesize="ae32" name="remove-circle" color="danger" arialabel="ae-remove-circle">
-      </ae-icons-component>
-      <p style="font-size:24px"><b>SIZE</b></p>
-      <ae-icons-component aetype="round" aesize="ae32" name="add-circle" color="success" arialabel="ae-add-circle">
-      </ae-icons-component>
+    <div class="container" style="  padding: 8px 0; display: inline-block;">
+      <ion-row>
+        <ae-icons-component aetype="round" aesize="ae32" name="remove-circle" color="danger"
+          arialabel="ae-remove-circle">
+        </ae-icons-component>
+        <span style="font-size:24px"><b>SIZE</b></span>
+        <ae-icons-component aetype="round" aesize="ae32" name="add-circle" color="success" arialabel="ae-add-circle">
+        </ae-icons-component>
+        <span style="font-size:24px"><b>RESET</b></span>
+        <ae-icons-component aetype="round" aesize="ae32" name="refresh-circle" color="tertiary"
+          arialabel="ae-refresh-circle">
+        </ae-icons-component>
+      </ion-row>
     </div>
     <p id="containerPara"><br></p>
     <hr>
