--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <!-- <script src="https://unpkg.com/@ionic/core@4.6.0/dist/ionic.js"></script> -->
 </head>
 
-<body bgcolor="ivory">
+<body style="background-color: ivory">
 
   <div>
     <ion-row>
