--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <a href="https://adaept.com/">
         <img src="assets/logo.gif" width="150" />
       </a>
-      <div>4.6.3/1.8.0/0.9.5</div>
+      <div>4.6.3/1.9.0-3/0.9.7</div>
     </ion-row>
     <!-- container is css grid and is using ion-icon with ionic theme -->
     <div class="container" style="  padding: 8px 0; display: inline-block;">
