wip(button): use icon-only and add id

--- a/src/index.html
+++ b/src/index.html
@@ -43,10 +43,10 @@
         </ae-icons-component>
         <span style="font-size:24px"><b>RESET</b></span>
         <ion-button>
-          <ion-icon slot="start" name="refresh-circle" shape="round" size="large" color="danger"></ion-icon>
+          <ion-icon id="3" slot="icon-only" name="refresh-circle" shape="round" size="large" color="danger"></ion-icon>
         </ion-button>
         <ion-button>
-          <ion-icon slot="start" name="globe" shape="round" size="large" color="success"></ion-icon>
+          <ion-icon id="4" slot="icon-only" name="globe" shape="round" size="large" color="success"></ion-icon>
         </ion-button>
         <!--
         <ae-icons-component id="3" aetype="round" aesize="ae40" name="refresh-circle" color="aered"
